<resources>
    <string name="app_name">Wiulgi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="welcome_to_wiugli">WIUGLI</string>
    <string name="products_and_services_text">products and services</string>
    <string name="logo">Logo</string>
    <string name="best_choices_for_you">BEST CHOICES FOR YOU</string>
    <string name="app_description">Hotest products and Services recommendation and reviews , wishlists all in one place</string>
    <string name="already_a_member_sign_in">Already a member ? Sign in</string>
    <string name="join_us_now">Join us now</string>
    <string name="for_you_title">For You</string>
    <string name="hottest_title">Hottest</string>
    <string name="my_wishlist_title">My Wishlist</string>
    <string name="nearby_title">Items Around You</string>
    <string name="settings_title">Settings</string>
    <string name="sign_in_title">Sign In</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="empty_list">No Items</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">com.asalfo.wiulgi</string>
    <string name="content_authority">com.asalfo.wiugli</string>


    <!-- For Shared Element Transitions -->
    <string name="detail_thumnail_transition_name" translatable="false">TN_DetailThumbnail</string>


    <!-- Empty Item Database -->
    <string name="empty_item_list">No item Information Available</string>
    <string name="empty_item_list_no_network">No item information available. The network is not available to fetch items data.</string>
    <string name="empty_item_list_server_down">No item information available. The server is not returning data.</string>
    <string name="empty_item_list_server_error">No item information available. The server is not returning valid data. Please check for an updated version of Wiulgi.</string>
    <string name="empty_item_list_invalid_location">No item information available. The request is not recognized by the server.</string>


    <string name="permission_explanation">Allow this app to use your location to show distance to item store ?</string>
    <string name="permission_explanation_action">Let\'s do it!</string>


    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_verify">Verify</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_password_not_match">This password doesn\'t match</string>
    <string name="error_field_required">This field is required</string>
    <string name="not_a_member_register">Not a member? Create an account</string>
    <string name="agreemanent_title">Accept terms and conditions</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="title_activity_sign_up">New account</string>
    <string name="sign_out">Sign Out</string>

    <string name="frist_name">Frist name</string>
    <string name="last_name">Last name</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="birthdate">Birthdate</string>

    <string name="action_cancel_profile">Save</string>
    <string name="action_save_profile">Save</string>
    <string name="action_edit_profile">Edit</string>


    <string name="session.connect_to_website_to_view_all_infos">Connect to the %s website to access more features.</string>
    <string name="session.dont_have_account">Don\'t have an account? Sign up!</string>
    <string name="session.email_address">Email address</string>
    <string name="session.error.invalid_password">Invalid password. Please try again or contact us if you have forgotten your password.</string>
    <string name="session.error.invalid_user">Your account is not valid, please contact us.</string>
    <string name="session.error.log_in_error">An error has occurred while logging in, please try again.</string>
    <string name="session.error.password_reset.message">An error has occurred, please try again later</string>
    <string name="session.error.unconfirmed_user">This account has not been activated yet. Please click on the link in the confirmation email we sent you (check your \'spam\' folder, or connect to %1$s to request another email).</string>
    <string name="session.error.user_not_found">No user found with this email address</string>
    <string name="session.sign_in">Sign in</string>
    <string name="session.log_in.facebook">Log in with Facebook</string>
    <string name="session.log_in.in_progress">Logging in…</string>
    <string name="session.log_in.success">Logged in</string>
    <string name="session.log_out">Log out</string>
    <string name="session.password">Password</string>
    <string name="session.password_reset_email_address">Email address:</string>
    <string name="session.password_reset_forget">Forgot password?</string>
    <string name="session.password_reset_mail_sent">We have sent you an email with instructions to reset your password.</string>
    <string name="session.sign_up">Sign up</string>
    <string name="session.sign_up.facebook">Sign up with Facebook</string>
    <string name="session.sign_up.in_progress">Signing up…</string>
    <string name="session.sign_up.success.message">Please activate your account through the email we sent you to %1$s</string>
    <string name="session.sign_up.success.title">Successfully signed up!</string>

    <string name="email_address">Email:</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="sign_up_text">Create a new account</string>
    <string name="wrong_credentials">The Email you entered couldn\'t be found or your password was incorrect. Please try again</string>
    <string name="retry">OK</string>
    <string name="service_unavailable">The service is unavailable, please try later.</string>
    <string name="no_connection">You don\'t have internet connection </string>

    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="fist_time">first_time</string>
    <string name="title_activity_item_detail">ItemDetailActivity</string>
    <string name="brand">Brand</string>
    <string name="color">Color</string>
    <string name="model">Model</string>
    <string name="product_image">Product image</string>
    <string name="size">Size</string>
    <string name="read_more">Read more</string>
    <string name="thumbnail_description_text">Item image</string>
    <string name="share_action_description_text">Share action</string>
    <string name="wishlist_action_description_text">Wishlist action</string>
    <string name="like_action_description_text">Like action</string>
    <string name="pref_server_status_key">server_status</string>
    <string name="go_to_profile">go to your profile</string>
    <string name="user_avatar">user avatar</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="added_to_favorite">The item %1$s has been marked as favorite</string>
    <string name="removed_from_favorite">The item %1$s has been removed form your favorite</string>
    <string name="added_to_wishlist">The item %1$s has been added to your wishlist </string>
    <string name="removed_from_wishlist">The item %1$s has been removed form your wishlist</string>

    <string name="widget_title"> Wiulgi Hottest Item</string>
    <string name="currency">%1$s$</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="profile_activity_title">Your Profile</string>
    <string name="sign_in_activity_title">Sign In</string>
    <string name="sing_up_activity_title">Sign Up</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>


    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_notifications">Enable notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Notifications</string>
    <string name="pref_description_notifications">Allow notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="pref_title_sync_frequency">Sync Recommendations Frequency</string>
    <string name="pref_sync_frequency_key" translatable="false">sync_frequency</string>
    <string name="vote_average_desc">Vote average</string>
    <string name="error_updating_profile">Sorry your can\'t be updated.</string>
    <string name="profile_updated">Profile updated successfully.</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
    </string-array>

    <string-array name="pref_sync_frequency_values">
        <item>3600</item>
        <item>10800</item>
        <item>21600</item>
    </string-array>
</resources>
