<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:windowSoftInputMode="adjustResize"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <LinearLayout
                android:id="@+id/profile_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/avatarView"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/user_avatar"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/user_email_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="sguigma@hotmail.com"/>

                    <TextView
                        android:id="@+id/profile_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="sguigma"/>


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_firtname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:enabled="false"
                android:hint="@string/frist_name"
                android:inputType="textCapWords"
                android:maxLines="1" />


            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:enabled="false"
                android:hint="@string/last_name"
                android:inputType="textCapWords"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:enabled="false"
                android:hint="@string/birthdate"
                android:inputType="textEmailAddress">
            </android.support.design.widget.TextInputEditText>

            <TextView
                android:id="@+id/genderTextView"
                android:layout_width="116dp"
                android:layout_height="0dp"
                android:text="@string/gender"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/sign_out_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
    </LinearLayout>


</ScrollView>