<?xml version="1.0" encoding="utf-8"?>
<com.asalfo.wiulgi.ui.ItemHeaderView android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_header_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="68dp"
    app:layout_collapseMode="parallax"
    tools:ignore="MissingPrefix"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/item_thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="thumbnail"
        android:scaleType="centerCrop"
        android:fitsSystemWindows="true"
        tools:src="@drawable/deadpool"
        app:layout_collapseMode="parallax"
        android:contentDescription="@string/thumbnail_description_text" />

    <LinearLayout
        android:id="@+id/item_info_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignEnd="@+id/item_thumbnail"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@+id/item_thumbnail"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_name"
            android:gravity="start"
            android:layout_marginStart="8dp"
            tools:text="Samsung Galaxy S7 Edge"
            style="@style/ItemName"/>

        <TextView
            android:id="@+id/item_price"
            android:layout_marginEnd="8dp"
            android:layout_gravity="end"
            style="@style/ItemPrice"
            tools:text="700.25 $"
            />


        <TextView
            android:id="@+id/item_distance"
            style="@style/ItemDistance"
            android:layout_gravity="start"
            tools:text="1.5 km"
            />

        <LinearLayout
            android:id="@+id/item_actions"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom">

            <ImageView
                android:id="@+id/item_action_wishlist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_add"
                android:layout_weight="1"
                android:contentDescription="@string/wishlist_action_description_text" />
            <ImageView
                android:id="@+id/item_action_like"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_favorite_border"
                android:layout_weight="1"
                android:contentDescription="@string/like_action_description_text" />

            <ImageView
                android:id="@+id/item_action_share"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_share"
                android:layout_weight="1"
                android:contentDescription="@string/share_action_description_text" />

        </LinearLayout>

    </LinearLayout>

</com.asalfo.wiulgi.ui.ItemHeaderView>